--- a/ViP-NeRF/runs/training/train0011/Configs.json
+++ b/ViP-NeRF/runs/training/train0011/Configs.json
@@ -59,9 +59,9 @@
             "view_dependent_rgb": true,
             "predict_visibility": true
         },
-        "chunk": 4096,
+        "chunk": 524288,
         "lindisp": false,
-        "netchunk": 16384,
+        "netchunk": 1048576,
         "perturb": true,
         "raw_noise_std": 1.0,
         "white_bkgd": false
@@ -95,15 +95,14 @@
         "beta2": 0.999
     },
     "resume_training": true,
-    "num_iterations": 50000,
-    "validation_interval": 10000,
+    "num_iterations": 1000,
+    "validation_interval": 500,
     "validation_chunk_size": 65536,
     "validation_save_loss_maps": false,
-    "model_save_interval": 10000,
+    "model_save_interval": 1000,
     "mixed_precision_training": false,
     "seed": 0,
     "device": [
-        0,
-        1
+        0
     ]
 }
