fix GPU usage error: fuck chatgpt

--- a/ViP-NeRF/runs/training/train0012/fern/ModelConfigs.json
+++ b/ViP-NeRF/runs/training/train0012/fern/ModelConfigs.json
@@ -3,10 +3,6 @@
         756,
         1008
     ],
-    "focal_length": [
-        815.1315832201474,
-        815.1315832201474
-    ],
     "bounds": [
         1.3333333333333333,
         6.179403816938637
@@ -16,6 +12,23 @@
         5,
         10,
         14
+    ],
+    "intrinsic": [
+        [
+            815.131591796875,
+            0.0,
+            504.0
+        ],
+        [
+            0.0,
+            815.131591796875,
+            378.0
+        ],
+        [
+            0.0,
+            0.0,
+            1.0
+        ]
     ],
     "average_pose": [
         [
@@ -28,13 +41,13 @@
             0.005488499023318268,
             0.9997119145451723,
             0.023365878859936264,
-            -0.028705724393825925
+            -0.028705724393825932
         ],
         [
             0.019480975691581658,
             -0.023468690139002858,
             0.9995347478548524,
-            -0.010344296680063514
+            -0.010344296680063512
         ],
         [
             0.0,
