--- a/ViP-NeRF/runs/training/train0015/Configs.json
+++ b/ViP-NeRF/runs/training/train0015/Configs.json
@@ -93,7 +93,16 @@
     "validation_save_loss_maps": false,
     "model_save_interval": 10000,
     "mixed_precision_training": false,
-    "seed": [602, 602, 999, 602, 999, 999, 602, 999],
+    "seed": [
+        602,
+        602,
+        999,
+        602,
+        999,
+        999,
+        602,
+        999
+    ],
     "device": [
         0,
         1
